--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticlesListPage.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticlesListPage.xaml
@@ -41,12 +41,11 @@
         </Entry>
     </Shell.TitleView>
 
-    <RefreshView Command="{Binding LoadArticlesCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
-        <RefreshView.CommandParameter>
-            <x:Boolean>
-                True
-            </x:Boolean>
-        </RefreshView.CommandParameter>
+    <RefreshView
+        x:Name="refreshView"
+        Command="{Binding LoadArticlesCommand}"
+        IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+
         <CollectionView x:Name="EditionsCollectionView" ItemsSource="{Binding Articles}">
 
             <CollectionView.ItemTemplate>
