Updated to NetStandard 2.1 - Fixed search refreshing.

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticlesListPage.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticlesListPage.xaml
@@ -22,7 +22,7 @@
             IsVisible="False"
             Placeholder="Search"
             PlaceholderColor="White"
-            ReturnCommand="{Binding LoadArticlesCommand}"
+            ReturnCommand="{Binding SearchArticlesCommand}"
             Text="{Binding SearchText}"
             TextColor="White">
             <Entry.ReturnCommandParameter>
