--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/AppShell.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/AppShell.xaml
@@ -56,11 +56,7 @@
             <ShellContent>
                 <ShellContent.ContentTemplate>
                     <DataTemplate>
-                        <views:ArticlesListPage>
-                            <x:Arguments>
-                                <helpers:ArticlesPageMode>Search</helpers:ArticlesPageMode>
-                            </x:Arguments>
-                        </views:ArticlesListPage>
+                        <views:SearchPage />
                     </DataTemplate>
                 </ShellContent.ContentTemplate>
             </ShellContent>
