Cleaned up article list page
Also, various bug fixes

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/AppShell.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/AppShell.xaml
@@ -37,7 +37,7 @@
             Title="Editions"
             Icon="tab_issues.png"
             Route="editions">
-            <ShellContent ContentTemplate="{DataTemplate views:EditionsPage}" Route="editions" />
+            <views:EditionsPage />
         </Tab>
         <Tab Title="Bookmarks" Icon="Bookmark.png">
             <ShellContent>
