--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticlesListPage.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticlesListPage.xaml
@@ -17,260 +17,33 @@
     x:DataType="viewmodels:ArticlesListViewModel"
     x:TypeArguments="viewmodels:ArticlesListViewModel"
     mc:Ignorable="d">
-    <!--<Shell.TitleView>
-        <Entry
-            BackgroundColor="Transparent"
-            ClearButtonVisibility="WhileEditing"
-            IsVisible="False"
-            Placeholder="Search"
-            PlaceholderColor="White"
-            ReturnCommand="{Binding SearchArticlesCommand}"
-            Text="{Binding SearchText}"
-            TextColor="White">
-            <Entry.Effects>
-                <effects:RemoveBorderEffect />
-            </Entry.Effects>
-            <Entry.ReturnCommandParameter>
-                <x:Boolean>
-                    False
-                </x:Boolean>
-            </Entry.ReturnCommandParameter>
-            <Entry.Triggers>
-                <DataTrigger
-                    Binding="{Binding PageMode}"
-                    TargetType="Entry"
-                    Value="{x:Static helpers:ArticlesPageMode.Search}">
-                    <Setter Property="IsVisible" Value="True" />
-                </DataTrigger>
-            </Entry.Triggers>
-        </Entry>
-    </Shell.TitleView>-->
 
     <Grid RowDefinitions="Auto,*">
 
-
         <Grid Grid.Row="1" xct:StateLayout.CurrentState="{Binding CurrentState, Converter={StaticResource listStateToLayoutStateConverter}}">
             <xct:StateLayout.StateViews>
-                <!--<xct:StateView StateKey="Custom">
-                                <StackLayout VerticalOptions="Fill">
-                                    <Label
-                                        Margin="40"
-                                        HorizontalTextAmslignment="Center"
-                                        Style="{StaticResource InformationText}"
-                                        Text="There's nothing here yet."
-                                        VerticalOptions="CenterAndExpand" />
-
-
-                                    <lottie:AnimationView
-                                        x:Name="animationView"
-                                        Animation="bookmarkanimation.json"
-                                        AutoPlay="True"
-                                        HeightRequest="200"
-                                        HorizontalOptions="FillAndExpand"
-                                        RepeatMode="Infinite"
-                                        VerticalOptions="FillAndExpand"
-                                        WidthRequest="200" />
-
-                                    <Label
-                                        Margin="40"
-                                        HorizontalOptions="Center"
-                                        HorizontalTextAlignment="Center"
-                                        Style="{StaticResource InformationText}"
-                                        Text="Swipe on an article to bookmark it and it will show up here."
-                                        VerticalOptions="CenterAndExpand" />
-                                </StackLayout>
-                            </xct:StateView>-->
-
-                <xct:StateView StateKey="Custom">
-                    <Label Text="Custom" />
-                </xct:StateView>
-
-                <xct:StateView StateKey="None">
-                    <Label Text="None" />
-                </xct:StateView>
-
                 <xct:StateView StateKey="Loading">
                     <ActivityIndicator
                         HorizontalOptions="Center"
                         IsRunning="True"
                         VerticalOptions="Center" />
                 </xct:StateView>
-
-
-                <xct:StateView StateKey="Error">
-                    <Label Text="You is Error" />
-                </xct:StateView>
-
-                <xct:StateView StateKey="Success">
-                    <Label Text="You are Successful" />
-                </xct:StateView>
-
-                <xct:StateView StateKey="Empty">
-                    <Label Text="You is empty" />
-                </xct:StateView>
-
             </xct:StateLayout.StateViews>
         </Grid>
 
-
-        <RefreshView
-            x:Name="refreshView"
+        <CollectionView
+            x:Name="ArticlesCollectionView"
             Grid.Row="1"
-            Command="{Binding LoadArticlesCommand}"
-            IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+            ItemsSource="{Binding Articles}"
+            Scrolled="ArticlesCollectionView_Scrolled">
 
-            <CollectionView x:Name="EditionsCollectionView" ItemsSource="{Binding Articles}">
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="models:Article">
+                    <views:ArticleDataTemplate />
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
 
-                <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="models:Article">
-
-                        <SwipeView BackgroundColor="{StaticResource WhiteLight}">
-                            <SwipeView.RightItems>
-                                <SwipeItems>
-                                    <SwipeItemView Command="{Binding BindingContext.ShareCommand, Source={x:Reference rootPage}}" CommandParameter="{Binding .}">
-                                        <Grid BackgroundColor="#3598DB" WidthRequest="60">
-                                            <Image
-                                                HorizontalOptions="Center"
-                                                Source="Share"
-                                                VerticalOptions="Center" />
-
-                                        </Grid>
-                                    </SwipeItemView>
-                                    <SwipeItemView Command="{Binding BindingContext.ToggleBookmarkCommand, Source={x:Reference rootPage}}" CommandParameter="{Binding .}">
-                                        <Grid BackgroundColor="#3598DB" WidthRequest="60">
-                                            <Grid.Triggers>
-                                                <DataTrigger
-                                                    Binding="{Binding IsSaved}"
-                                                    TargetType="Grid"
-                                                    Value="True">
-                                                    <Setter Property="BackgroundColor" Value="{StaticResource RedLight}" />
-                                                </DataTrigger>
-                                            </Grid.Triggers>
-                                            <Image
-                                                HorizontalOptions="Center"
-                                                Source="Bookmark"
-                                                VerticalOptions="Center">
-                                                <Image.Triggers>
-                                                    <DataTrigger
-                                                        Binding="{Binding IsSaved}"
-                                                        TargetType="Image"
-                                                        Value="True">
-                                                        <Setter Property="Source" Value="Unbookmark" />
-                                                    </DataTrigger>
-                                                </Image.Triggers>
-                                            </Image>
-
-                                        </Grid>
-                                    </SwipeItemView>
-                                </SwipeItems>
-                            </SwipeView.RightItems>
-                            <ContentView>
-                                <rv:MaterialFrame
-                                    Margin="{StaticResource CardMargin}"
-                                    Padding="0"
-                                    CornerRadius="4"
-                                    HasShadow="True"
-                                    IsClippedToBounds="True"
-                                    MaterialTheme="Acrylic">
-                                    <Grid
-                                        Margin="0,0,10,0"
-                                        ColumnDefinitions="8, *"
-                                        ColumnSpacing="20"
-                                        RowDefinitions="Auto, Auto, Auto, Auto"
-                                        RowSpacing="10">
-                                        <BoxView
-                                            Grid.Row="0"
-                                            Grid.RowSpan="4"
-                                            Grid.Column="0"
-                                            BackgroundColor="{Binding Category, Converter={StaticResource categoryToColorConverter}}"
-                                            CornerRadius="4,0,4,0"
-                                            HorizontalOptions="Start"
-                                            WidthRequest="8" />
-
-                                        <Label
-                                            Grid.Row="0"
-                                            Grid.Column="1"
-                                            Margin="0,10,0,0"
-                                            Style="{StaticResource ArticleTitle}"
-                                            Text="{Binding Title}" />
-
-                                        <Label
-                                            Grid.Row="1"
-                                            Grid.Column="1"
-                                            Style="{StaticResource ArticleAuthor}"
-                                            Text="{Binding Author}"
-                                            TextColor="{Binding Category, Converter={StaticResource categoryToColorConverter}}" />
-
-                                        <Label
-                                            Grid.Row="2"
-                                            Grid.Column="1"
-                                            Style="{StaticResource ArticleDescription}"
-                                            Text="{Binding Description}" />
-
-                                        <Label
-                                            Grid.Row="3"
-                                            Grid.Column="1"
-                                            IsVisible="{Binding IsSaved}"
-                                            Text="Saved" />
-
-                                        <StackLayout
-                                            Grid.Row="3"
-                                            Grid.Column="1"
-                                            IsVisible="{OnPlatform UWP=True,
-                                                                   Default=False}"
-                                            Orientation="Horizontal">
-                                            <Label HorizontalOptions="Start" Text="Share">
-                                                <Label.GestureRecognizers>
-                                                    <TapGestureRecognizer Command="{Binding BindingContext.ShareCommand, Source={x:Reference rootPage}}" CommandParameter="{Binding .}" />
-                                                </Label.GestureRecognizers>
-                                            </Label>
-                                            <Label HorizontalOptions="Start" Text="Bookmark">
-                                                <Label.GestureRecognizers>
-                                                    <TapGestureRecognizer Command="{Binding BindingContext.ToggleBookmarkCommand, Source={x:Reference rootPage}}" CommandParameter="{Binding .}" />
-                                                </Label.GestureRecognizers>
-
-                                            </Label>
-                                        </StackLayout>
-
-
-                                        <rv:MaterialFrame
-                                            Grid.Row="3"
-                                            Grid.Column="1"
-                                            Margin="0,0,10,10"
-                                            Padding="10,3"
-                                            CornerRadius="6"
-                                            HeightRequest="20"
-                                            HorizontalOptions="Start"
-                                            LightThemeBackgroundColor="{Binding Category, Converter={StaticResource categoryToColorConverter}}"
-                                            MaterialTheme="Acrylic"
-                                            VerticalOptions="End">
-                                            <Label
-                                                Style="{StaticResource CategoryLozenge}"
-                                                Text="{Binding Category}"
-                                                TextColor="White" />
-                                        </rv:MaterialFrame>
-
-
-
-                                        <Grid.GestureRecognizers>
-                                            <TapGestureRecognizer
-                                                Command="{Binding BindingContext.OpenArticleCommand, Source={x:Reference rootPage}}"
-                                                CommandParameter="{Binding .}"
-                                                NumberOfTapsRequired="1" />
-
-                                        </Grid.GestureRecognizers>
-                                    </Grid>
-                                </rv:MaterialFrame>
-                            </ContentView>
-                        </SwipeView>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-
-                <CollectionView.EmptyView />
-            </CollectionView>
-        </RefreshView>
-
-
+        </CollectionView>
 
     </Grid>
 </views:PageBase>
